syntax = "proto3";

option go_package = "./pb";

package chat;

import "chat.proto";

message Command {
  string Event = 1;
  string TriggeredBy = 2;
  string TriggeredGroup = 3;
  ChatMessage ChatMessage = 4;
}

message LogEntry {
  Command Command = 1;
  int64 Term = 2;
}

message CommitEntry {
  Command Command = 1;
  int64 Index = 2;
  int64 Term = 3;
}

message AppendEntriesRequest {
  int64 Term = 1;
  int64 LeaderId = 2;
  int64 PrevLogIndex = 3;
  int64 PrevLogTerm = 4;
  repeated LogEntry Entries = 5;
  int64 LeaderCommit = 6;
}

message AppendEntriesResponse {
  int64 Term = 1;
  bool Success = 2;
  // Faster conflict resolution optimization
  int64 ConflictIndex = 3;
  int64 ConflictTerm = 4;
}

message RequestVoteRequest {
  int64 Term = 1;
  int64 CandidateId = 2;
  int64 LastLogIndex = 3;
  int64 LastLogTerm = 4;
}

message ForwardLeaderRequest { Command Command = 1; }

message ForwardLeaderResponse {
  bool Success = 1;
  int64 LeaderId = 2;
}

message RequestVoteResponse {
  int64 Term = 1;
  bool VoteGranted = 2;
}
